samples/_failures_safe/1761127071_5fb8fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2e718d5.c: In function ‘main’:
./samples/SAFE/__tmp_b2e718d5.c:157:9: error: expected expression at end of input
  157 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_b2e718d5.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2e718d5.c:157:9: error: expected declaration or statement at end of input
